# corvid-ai

./: .atlasignore  Cargo.toml  README.md  fledge.toml
.github/workflows/: ci.yml  pages.yml  trust.yml
.specsync/: adoption-report.json  change-sequence.json  registry.toml  sdd.json
.specsync/changes/CHG-0001-adopt-specsync-5-0-1-and-trust-1-0-0-governance-for-corvid-ai/: approvals.json  change.md  context.md  design.md  docs.md  plan.md  research.md  state.json  tasks.md  testing.md  verification-attempts.json  verification.json
.specsync/changes/CHG-0002-record-the-exact-portable-specsync-5-0-1-and-trust-1-0-0-governance-migration-fo/: approvals.json  change.md  context.md  design.md  docs.md  plan.md  research.md  state.json  tasks.md  testing.md  verification-attempts.json  verification.json
.specsync/changes/CHG-0003-complete-the-canonical-corvid-ai-contract-for-the-crate-facade-and-secret-redact/: approvals.json  change.md  context.md  design.md  docs.md  state.json  tasks.md  testing.md  verification-attempts.json  (+1 more)
specs/config/: config.spec.md  context.md  requirements.md  tasks.md  testing.md
specs/crate-api/: crate-api.spec.md  requirements.md  testing.md
specs/error/: context.md  error.spec.md  requirements.md  tasks.md  testing.md
specs/provider/: context.md  provider.spec.md  requirements.md  tasks.md  testing.md
specs/redaction/: redaction.spec.md  requirements.md  testing.md
specs/registry/: context.md  registry.spec.md  requirements.md  tasks.md  testing.md
src/: config.rs  error.rs  lib.rs  provider.rs  redact.rs  registry.rs
(+20 files in other folders)
